# Multi-Agentic-Major-Project

./: .env.example  .gitignore  QUICKSTART.md  README.md  docker-compose.yml  fix_windows_loop.py  generated_eda.py  generated_ml_training.py  how to run  master_repair.py  pyproject.toml  repair_browser.py  repair_core.py  requirements.txt  run_browser_robust.py  test_browser_agent.py  test_critic.py  test_data_engineer.py  test_ml_engineer.py  test_research_agent.py  test_sniffer.py
.github/workflows/: ci.yml
chrome_data/: Local State
chrome_data/Default/: DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state  trusted_vault.pb
chrome_data/Default/DawnGraphiteCache/: data_1  index
chrome_data/Default/DawnWebGPUCache/: data_1  index
chrome_data/Default/Extension Rules/: LOG
chrome_data/Default/Extension Scripts/: LOG
chrome_data/Default/Extension State/: LOG  LOG.old
chrome_data/Default/GCM Store/: LOG  LOG.old
chrome_data/Default/GPUCache/: data_0  data_1  data_2  index
chrome_data/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
chrome_data/Default/Session Storage/: 000005.ldb  000008.ldb  000011.ldb  LOG  LOG.old  MANIFEST-000001
chrome_data/Default/Sessions/: Session_13413015041643030  Session_13413015114622095  Tabs_13413015041906143  Tabs_13413015114887715
chrome_data/Default/WebStorage/: QuotaManager
chrome_data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_000010  f_000011  f_000012  index
chrome_data/GraphiteDawnCache/: data_1  index
chrome_data/ShaderCache/: data_1  index
chrome_data/segmentation_platform/: ukm_db
infra/docker/: browser_agent.Dockerfile  ml_worker.Dockerfile  orchestrator.Dockerfile
libs/core/: README.md  __init__.py  logger.py  pyproject.toml  state.py
libs/core/core/: __init__.py  logger.py  models.py  state.py  utils.py
services/browser_agent/: README.md  __init__.py
services/ml_worker/: README.md  __init__.py
services/orchestrator/: README.md  __init__.py
tests/: test_browser_agent.py  test_logger.py  test_ml_worker.py  test_orchestrator.py  test_state.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx  ResearchFeed.jsx  index.css
(+688 files in other folders)
